css/globals/formatting.less
.formatting {
  @spacing : 1.75rem;
  h1, h2, h3, h4 {
    .type-bold;
    .type-secondary;
    line-height: 1em;
    padding: .5em 0;
    & + *:not(hr) { //clears margin of element directly following a Heading
      margin-top: 0 !important;
    }
  }
  //for wordpress only, we can't use H1, H2 for SEO reasons
  h3 {
    .font-m3;
  }
  h4 {
    .font-m2;
  }
  h5, h6 {
    .std-xpadding;
  }
  hr + * {
    margin-top: 0 !important;
  }
  p {
    .cf;
    color: @color-medium-well;
    line-height: 1.75em;
    margin-bottom: @spacing;
    margin-top: @spacing;
    position: relative;
    &:only-of-type {
      margin-bottom: 0;
      margin-top: 0;
    }
    &:first-of-type:not(:only-of-type) { margin-top: 0; }
    &:last-of-type:not(:only-of-type) { margin-bottom: 0; }
    > img:only-child {
      margin-bottom: 0;
      margin-top: 0;
    }
  }
  a:not(.img) {
    .link-underline();
  }
  aside, .note {
    background: @color-note;
    padding: 1.25em;
    border-radius: 3px;
  }
  .note {
    margin-bottom: @spacing;
    margin-top: @spacing;
    &:first-child { margin-top: 0; }
    &:last-child { margin-bottom: 0; }
  }
  aside {
    .font-s2;
    clear: both;
    float: right;
    margin-left: 2rem;
    position: relative;
    width: 160px;
    &:before {
      border-bottom: .75rem solid transparent;
      border-right: .75rem solid @color-note;
      border-top: .75rem solid transparent;
      content: '';
      position: absolute;
      top: 50%;
      margin-top: -.75rem;
      left: -.75rem;
      z-index: 2;
    }
    .type {
      .type-bold;
      text-transform: uppercase;
    }
  }
  figure {
    clear: both;
    margin-bottom: @spacing;
    margin-top: @spacing;
    figcaption {
      .font-s1;
      color: @color-medium;
    }
  }

  img{
    display: inline-block;
    margin: @spacing 1.25em;
    max-width: 100%;
    position: relative;
    vertical-align: top;
    height: auto;
    &.alignright{
      float: right;
      margin-right: 0;
    }
    &.alignleft{
      float: left;
      margin-left: 0;
    }
    &.aligncenter{
      display: block;
      margin-bottom: @spacing;
      margin-left: auto;
      margin-right: auto;
      margin-top: @spacing;
    }
    &.alignnone {
      margin: 0;
    }
  }
  blockquote {

    .font-s3;
    .type-secondary;
    border-left: 3px solid @color-primary;
    color: @color-medium;
    margin-bottom: 2rem;
    margin-top: 2rem;
    padding: .75em 1.25em .75em 1.5em;
    p {
      &:only-of-type {
        margin: 0;
      }
    }
  }
  ol, ul {
    list-style-position: outside;
    margin-bottom: @spacing;
    margin-top: @spacing;
    padding-left: 2rem;
    li {
      .font-s3;
      margin-bottom: .75rem;
      &:last-child {
        margin-bottom: 0;
      }
    }
  }
  ol {
    list-style-type: decimal;
  }
  ul {
    list-style-type: disc;
  }
  pre {
    margin-top: 2rem;
    margin-bottom: 2rem;
    code {
      .ellipsize;
      border: none;
      box-shadow: none;
      color: @color-medium-well;
      margin: 0;
      max-width: 100%;
      padding: 0;
    }
  }
  .highlight pre {
    overflow: auto;
    padding: .5rem .75rem;
  }
  /* Tables based on Github Markdown */
  table {
    .font-s2;
    padding: 0;
  }
  table tr {
    border-top: 1px solid @color-rare;
    background-color: white;
    margin: 0;
    padding: 0;
  }
  table tr:nth-child(2n) {
    background-color: @color-raw;
  }
  table tr th {
    font-weight: bold;
    border: 1px solid #ddd;
    border-radius: 3px 3px 0 0;
    text-align: left;
    margin: 0;
    padding: .5rem .75rem;
  }
  table tr td {
    border: 1px solid #ddd;
    text-align: left;
    margin: 0;
    padding: .5rem 1rem;
  }
  table tr th :first-child, table tr td :first-child {
    margin-top: 0;
  }
  table tr th :last-child, table tr td :last-child {
    margin-bottom: 0;
  }

}

